compiler-cli/src/dependencies/snapshots/gleam_cli__dependencies__tests__pretty_print_outdated_versions_no_updates.snap
---
source: compiler-cli/src/dependencies/tests.rs
expression: output
---
0 of 12 packages have newer versions available.
