compiler-cli/src/dependencies/snapshots/gleam_cli__dependencies__tests__pretty_print_version_updates.snap
---
source: compiler-cli/src/dependencies/tests.rs
expression: output
---
Package                 Current   Latest
-------                 -------   ------
gleam_stdlib            0.45.0    0.46.0
very_long_package_name  12.12.12  120.12.12
wisp                    2.1.0     2.1.1
